# unmatched-tracker

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-android/: action.yml
.github/workflows/: android.yml  migrations.yml
src/: config.cpp  config.h  config.json  log.cpp  log.h  main.cpp  models.h  rc.h
src/api/: api.cpp  api.h  assetsprovider.h
src/backend/: backend.cpp  backend.h
src/cache/: filecache.cpp  filecache.h
src/components/events/keyboard/: backhandler.cpp  backhandler.h
src/components/render/: cacheimage.cpp  imagerounded.cpp  imagerounded.h
src/core/: core.cpp  core.h  db_exporter.cpp  db_exporter.h  errors.h  fileprovider.h
src/db/: db.cpp  db.h  migrator.cpp
src/files/: filecache.cpp  filecache.h  provider.cpp  provider.h
src/handlers/: dlc.h
src/migrations/: 001_init.up.sql  002_add_basic_sets.up.sql  003_add_cards.up.sql  004_add_profiles.up.sql  005_add_game_history.up.sql  006_profiles_uuid.up.sql  007_update_heroes_properties.sql  007_update_heroes_properties.up.sql  008_add_cards.up.sql
src/sql/: 001_init.up.sql
ui/: Main.qml
ui/Tracker/: Common.qml
ui/assets/img/ui/: menu_logo.xcf
ui/common/: Common.qml  qmldir
ui/components/: BigImagePopup.qml  Btn.qml  Card.qml  CardGrid.qml  DeleteConfirmPopup.qml  FieldBox.qml  GameHistory.qml  GameMap.qml  GameParticipantInput.qml  Header.qml  ImagePlaceholder.qml  LoadImage.qml  Menu.qml  MultiSelectDropdown.qml  Notif.qml  RandomFilter.qml  RandomWheel.js  RandomWheel.qml  StatTile.qml  ThemedComboBox.qml  VS.qml
ui/components/ico/: BackIco.qml  MenuIco.qml
ui/views/: Games.qml  Home.qml  Profiles.qml  Random.qml  Set.qml  Settings.qml
ui/views/set/: Hero.qml  Heroes.qml  Set.qml  SetStack.qml
ui/views/set/hero/: Avatar.qml  Cards.qml  CommonStat.qml  Hero.qml  ProfileStat.qml  TabMenu.qml
ui/views/set/hero/tabs/: Cards.qml
